Updated to include project description and command to run application